[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tcmb"
version = "0.3.0"
authors = [{ name = "Kaymal", email = "gutkyle@gmail.com" }]
description = "Central Bank of the Republic of Türkiye (TCMB) Python API."
readme = "README.md"
license = { file = 'LICENSE' }
requires-python = ">=3.8"
classifiers = [
    'Operating System :: OS Independent',
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
dependencies = ["pandas", "numpy", "requests"]

[project.urls]
repository = "https://github.com/kaymal/tcmb-py"
pypi = "https://pypi.org/project/tcmb"

[tool.setuptools.packages.find]
include = ["tcmb"]
namespaces = true

[tool.setuptools.package-data]
"tcmb.resources" = ["*"]
